--- a/src/Sooda/Sooda.vs2005.csproj
+++ b/src/Sooda/Sooda.vs2005.csproj
@@ -397,6 +397,9 @@
     <Compile Include="QL\SoqlBooleanRelationalExpression.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="QL\SoqlConditionalExpression.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="QL\SoqlContainsExpression.cs">
       <SubType>Code</SubType>
     </Compile>
