CLEANUP ObjectMapper: refactor common parts of SoodaObjectOneToManyCollection and SoodaObjectManyToManyCollection to SoodaObjectCollectionBase.

--- a/src/Sooda/Sooda.vs2003.csproj
+++ b/src/Sooda/Sooda.vs2003.csproj
@@ -114,6 +114,7 @@
         <File RelPath='ObjectMapper\SchemaLoader.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='ObjectMapper\SoodaFieldHandler.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='ObjectMapper\SoodaNullObjectFactoryCache.cs' SubType='Code' BuildAction='Compile' />
+        <File RelPath='ObjectMapper\SoodaObjectCollectionBase.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='ObjectMapper\SoodaObjectCollectionWrapper.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='ObjectMapper\SoodaObjectFactoryAttribute.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='ObjectMapper\SoodaObjectFactoryCache.cs' SubType='Code' BuildAction='Compile' />
