BUGREPORT Cyclic references: one of the references is null.

--- a/tests/UnitTestObjects/Sooda.UnitTests.Objects.vs2003.csproj
+++ b/tests/UnitTestObjects/Sooda.UnitTests.Objects.vs2003.csproj
@@ -138,6 +138,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "EightFields.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "ExtendedBike.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
