--- a/tests/UnitTestObjects/Sooda.UnitTests.Objects.vs2005.csproj
+++ b/tests/UnitTestObjects/Sooda.UnitTests.Objects.vs2005.csproj
@@ -117,6 +117,9 @@
     <Compile Include="ConcreteMegaSuperBikeB.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="EightFields.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="ExtendedBike.cs">
       <SubType>Code</SubType>
     </Compile>
