--- a/src/SoodaCompileStubs/SoodaCompileStubs.vs2008.csproj
+++ b/src/SoodaCompileStubs/SoodaCompileStubs.vs2008.csproj
@@ -36,7 +36,7 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>TRACE;DEBUG;VSNET,DOTNET2,DOTNET35</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;VSNET,DOTNET35</DefineConstants>
     <DocumentationFile>
     </DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
@@ -58,7 +58,7 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>TRACE;VSNET,DOTNET2,DOTNET35</DefineConstants>
+    <DefineConstants>TRACE;VSNET,DOTNET35</DefineConstants>
     <DocumentationFile>
     </DocumentationFile>
     <DebugSymbols>false</DebugSymbols>
