CONFIG Update *.csproj.

--- a/src/Sooda/Sooda.vs2005.csproj
+++ b/src/Sooda/Sooda.vs2005.csproj
@@ -683,6 +683,8 @@
     </None>
     <Compile Include="QL\TypedWrappers\SoqlImageWrapperExpression.cs" />
     <Compile Include="QL\TypedWrappers\SoqlNullableImageWrapperExpression.cs" />
+    <Compile Include="QL\SoqlStringContainsExpression.cs" />
+    <Compile Include="QL\SoqlCastExpression.cs" />
     <Compile Include="AssemblyBuildInfo.cs" />
   </ItemGroup>
   <ItemGroup />
