CLEANUP csproj: update.

--- a/src/SoodaQuery/SoodaQuery.csproj
+++ b/src/SoodaQuery/SoodaQuery.csproj
@@ -108,6 +108,9 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="AssemblyBuildInfo.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
