FUNCTION Dynamic Fields: read fields with an indexer.

--- a/tests/TestCases/Sooda.UnitTests.TestCases.vs2005.csproj
+++ b/tests/TestCases/Sooda.UnitTests.TestCases.vs2005.csproj
@@ -108,6 +108,7 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DynamicFieldsTest.cs" />
     <Compile Include="Caching\CollectionTest.cs" />
     <Compile Include="Caching\CachingTest.cs" />
     <Compile Include="Caching\CollectionEvictTest.cs" />
