FUNCTION Dynamic Fields: add, remove and persist.

--- a/src/Sooda/Sooda.vs2005.csproj
+++ b/src/Sooda/Sooda.vs2005.csproj
@@ -517,6 +517,9 @@
     <Compile Include="Schema\DeleteAction.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Schema\DynamicFieldManager.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Schema\FieldDataType.cs">
       <SubType>Code</SubType>
     </Compile>
