FUNCTION LINQ: custom expression rewriters.

--- a/src/Sooda/Sooda.vs2008.csproj
+++ b/src/Sooda/Sooda.vs2008.csproj
@@ -155,6 +155,12 @@
     <Compile Include="Linq\SelectExecutor.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Linq\SoodaExpressionRewriteAttribute.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Linq\SoodaExpressionRewriter.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Linq\SoodaLinqMethod.cs">
       <SubType>Code</SubType>
     </Compile>
