--- a/tests/TestCases/Sooda.UnitTests.TestCases.vs2005.csproj
+++ b/tests/TestCases/Sooda.UnitTests.TestCases.vs2005.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Linq\OptionsTest.cs" />
     <Compile Include="Linq\PrecommitTest.cs" />
     <Compile Include="Linq\QueryTest.cs" />
+    <Compile Include="Linq\RewriterTest.cs" />
     <Compile Include="Linq\ScalarTest.cs" />
     <Compile Include="Linq\SingleTest.cs" />
     <Compile Include="Linq\SubqueryTest.cs" />
