FUNCTION LINQ: custom method and property replacement expressions.
Using the convention that an XXXExpression returns a lambda which is processed as a replacement for an XXX method/property.

--- a/src/Sooda/Sooda.csproj
+++ b/src/Sooda/Sooda.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ISoodaObjectFactory.cs" />
     <Compile Include="ISoodaObjectList.cs" />
     <Compile Include="Linq\LinqUtils.cs" />
+    <Compile Include="Linq\ParameterBinder.cs" />
     <Compile Include="Linq\SelectExecutor.cs" />
     <Compile Include="Linq\SoodaExpressionRewriteAttribute.cs" />
     <Compile Include="Linq\SoodaExpressionRewriter.cs" />
